--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# Dependencies
+﻿# Dependencies
 node_modules/
 npm-debug.log*
 yarn-debug.log*
@@ -51,7 +51,7 @@ dist/
 
 # Data files (should not be in git)
 data/
-*.json
+data/*.json
 
 # Temporary files
 tmp/
